# MineGuardAI

./: .replit  app.py  browser_tts.py  camera_page.py  config.py  dashboard.py  data_generator.py  model_trainer.py  predictor.py  pyproject.toml  utils.py
data/: tabular_features.csv
logs/fit/20250921-183216/train/: events.out.tfevents.1758459741.USER.3944.0.v2
logs/fit/20250921-183216/validation/: events.out.tfevents.1758459805.USER.3944.1.v2
logs/fit/20250921-183750/train/: events.out.tfevents.1758460075.USER.2560.0.v2
logs/fit/20250921-183842/train/: events.out.tfevents.1758460127.USER.2560.1.v2
logs/fit/20250921-183842/validation/: events.out.tfevents.1758460169.USER.2560.2.v2
logs/fit/20250921-184605/train/: events.out.tfevents.1758460566.USER.2560.3.v2
logs/fit/20250921-184605/validation/: events.out.tfevents.1758460583.USER.2560.4.v2
logs/fit/20250921-192758/train/: events.out.tfevents.1758463079.USER.2560.5.v2
logs/fit/20250921-192758/validation/: events.out.tfevents.1758463099.USER.2560.6.v2
logs/fit/20250921-194535/train/: events.out.tfevents.1758464141.USER.2560.7.v2
logs/fit/20250921-194535/validation/: events.out.tfevents.1758464182.USER.2560.8.v2
logs/fit/20250921-211020/train/: events.out.tfevents.1758469221.USER.2560.9.v2
logs/fit/20250921-211020/validation/: events.out.tfevents.1758469238.USER.2560.10.v2
logs/fit/20250922-205359/train/: events.out.tfevents.1758554646.USER.11696.0.v2
models/: feature_scaler.pkl  feature_selector.pkl  knn_model.joblib  rf_model.pkl
(+3 files in other folders)
